# risinglight-tutorial

./: 01-01-hello-sql.html  01-02-catalog.html  01-03-create-table.html  01-04-array.html  01-05-insert.html  01-06-planner.html  01-07-select.html  01-08-execution.html  01-intro.html  02-01-operation.html  02-02-where.html  02-03-order.html  02-04-limit.html  02-05-aggregation.html  02-06-group.html  02-07-join.html  02-08-hash-join.html  02-09-copy.html  02-10-tpch.html  02-query.html  03-01-memtable.html  03-02-write.html  03-03-manifest.html  03-04-read.html  03-05-deletion.html  03-06-compaction.html  03-storage.html  404.html  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  deploy.yml
code/: .gitignore  Cargo.toml
code/01-01/: Cargo.toml
code/01-02/: Cargo.toml
code/01-03/: Cargo.toml
code/01-04/: Cargo.toml
code/01-05/: Cargo.toml
code/01-06/: Cargo.toml
code/01-07/: Cargo.toml
code/01-08/: Cargo.toml
code/01-08/src/: db.rs  main.rs
code/01-08/src/executor/: create.rs  explain.rs  insert.rs  seq_scan.rs  values.rs
code/03-00/: Cargo.toml
code/03-00/src/: db.rs  main.rs  test.rs
code/03-00/src/catalog/: column.rs
code/03-00/src/executor/: create.rs  dummy.rs  insert.rs
code/03-00/src/storage/: mod.rs  rowset.rs
code/03-01/: Cargo.toml
code/03-02/: Cargo.toml
code/03-03/: Cargo.toml
code/03-04/: Cargo.toml
code/sql/: 03-01.slt  03-02.slt
docs/src/: 00-lets-build-a-database.md  01-01-hello-sql.md  01-02-catalog.md  01-03-create-table.md  01-04-array.md  01-08-execution.md  01-intro.md  SUMMARY.md  (+5 more)
scripts/: update-storage-tutorial.sh
(+94 files in other folders)
